# VoliBot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  InstanceManager.hpp  LICENSE  Utils.hpp  main.cpp
sqlite/: CMakeLists.txt  sqlite_orm.h
src/: BotEvents.hpp  Communication.hpp  INIReader.h  InstanceManager.cpp  InstanceManager.hpp  StaticEnums.h  VoliServer.cpp  VoliServer.hpp  common.hpp  main.cpp
src/message/: MessageType.hpp
